# myresearcher

./: .gitignore  AGENTS.md  README.md  TECHNICAL_REPORT.md  multi-agent-upgrade-plan.md  multi-plan.md  role.md
backend/: .env.example  README.md  langgraph.json  nohup.out  pyproject.toml
backend/src/: __init__.py  agent.py  config.py  event_mapping.py  langgraph_app.py  main.py  models.py  prompts.py  utils.py
backend/src/graph/: __init__.py  builder.py  state.py  studio.py  supervisor.py
backend/src/graph/agents/: __init__.py  planner_agent.py  researcher_agent.py  reviewer_agent.py  writer_agent.py
backend/src/graph/nodes/: __init__.py  planner.py  research_more.py  reviewer.py  task.py  writer.py
backend/src/research_support/: __init__.py  compression.py  embeddings.py  prompts.py
backend/src/services/: search.py
backend/tests/: test_python310_compat.py  test_reviewer_node.py  test_search.py
frontend/: index.html  nohup.out  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/services/: api.ts
scripts/: start-all.sh  start-backend.sh  start-frontend.sh  status-all.sh  stop-all.sh
